update create logbook
